<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.AddPerson">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/style_toolbar"
        app:title="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            style="@style/style_text_view"
            android:text="@string/secondName" />

        <EditText
            android:id="@+id/secondName"
            style="@style/style_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            style="@style/style_text_view"
            android:text="@string/firstName" />

        <EditText
            android:id="@+id/firstName"
            style="@style/style_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            style="@style/style_text_view"
            android:text="@string/age" />

        <EditText
            android:id="@+id/age"
            style="@style/style_edit_text"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            style="@style/style_text_view"
            android:text="@string/role" />

        <Spinner
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/save"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/cancel" />
    </GridLayout>
</LinearLayout>