<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ListRole">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/style_toolbar"
        app:title="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/style_text_view"
            android:text="@string/role" />

        <EditText
            android:id="@+id/roleET"
            style="@style/style_edit_text"
            android:hint="@string/enterRole" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/addRoleBTN"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/addRole" />

        <Button
            android:id="@+id/backBTN"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/back" />
    </GridLayout>

    <ListView
        android:id="@+id/listRoleLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>