<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.DataBaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/style_toolbar"
        app:title="@string/app_name" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="10dp">

        <Button
            android:id="@+id/clearDatabase"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/clearDatabase" />

        <Button
            android:id="@+id/backBTN"
            style="@style/style_button"
            android:layout_columnWeight="1"
            android:text="@string/back" />
    </GridLayout>

    <!--    <GridLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:columnCount="2"-->
    <!--        android:padding="10dp">-->

    <TextView
        android:id="@+id/listPersonTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        android:text="@string/listStaff" />

    <!--        <TextView-->
    <!--            android:id="@+id/listRolesTV"-->
    <!--            android:layout_columnWeight="1"-->
    <!--            android:layout_margin="5dp"-->
    <!--            android:text="@string/listRole" />-->
    <!--    </GridLayout>-->

</LinearLayout>